[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "crawl4ai>=0.8.9",
    "fastmcp[apps]>=3.4.2",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "pypdf>=6.13.2",
]
